--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
       <section class="page__destination destination">
       <div class="destination__container container">
           <h1 class="title"><span>01</span> PICK YOUR DESTINATION</h1>
+          <div class="destination__error">
+            <pre>We are appologizing for our servers' error. <br> Come again later!</pre>
+          </div>
           <div class="destination__info info">
               <div class="destination__image info__image">
                 <img src="assets/destination/image-moon.png" alt="moon">
