--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       <section class="page__destination destination">
       <div class="destination__container container">
           <h1 class="title"><span>01</span> PICK YOUR DESTINATION</h1>
-          <div class="destination__error">
-            <pre>We are appologizing for our servers' error. <br> Come again later!</pre>
+          <div class="error">
+            <p>We are appologizing for our servers' error. <br> Come again later!</p>
           </div>
           <div class="destination__info info">
               <div class="destination__image info__image">
@@ -142,6 +142,9 @@
     <main class="page">
       <div class="page__container container">
         <h1 class="title"><span>02</span> MEET YOUR CREW</h1>
+        <div class="error">
+          <p>We are appologizing for our servers' error. <br> Come again later!</p>
+        </div>
         <section class="swiper swiper_crew">
           <div class="swiper-wrapper">
             <section class="swiper-slide slide">
@@ -230,7 +233,10 @@
     <main class="page">
       <div class="container_title">
         <h1 class="title"><span>03</span> SPACE LAUNCH 101</h1>
-      </div>        
+        <div class="error">
+          <p>We are appologizing for our servers' error. <br> Come again later!</p>
+        </div>        
+      </div>
       <div class="content">
         <section class="swiper swiper_technology">
           <div class="swiper-wrapper">
